--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body {
     color: seashell;
     background-color: black;
     opacity: 0.9;
+    margin: 0;
 }
 
 header {
@@ -17,6 +18,7 @@ header {
     justify-content: space-between;
     background-color: black;
     flex-wrap: wrap;
+    margin-top: 0;
 }
 
 .logo {
